# vagent

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  DEPLOY.md  HANDOFF.md  README.md  docker-compose.yml
backend/: .dockerignore  Dockerfile  pyproject.toml
backend/app/: bot.py  main.py
backend/app/api/: health.py  rate_limit.py  session.py
backend/app/core/: errors.py  logging.py  settings.py
backend/app/data/: help_center.json
backend/app/pipeline/: __init__.py  idle_session.py  prompts.py  tts_emotion.py  vad.py
backend/app/pipeline/processors/: __init__.py  data_channel_sender.py  help_center_retriever.py  output_guard.py  state_tracker.py
backend/app/schemas/: __init__.py  config.py  events.py
backend/app/services/: __init__.py  agent_runner.py  daily.py  help_center.py
backend/tests/: test_agent_runner.py  test_ch1_bot.py  test_config_injection.py  test_contract_sync.py  test_health.py  test_help_center.py  test_idle_session.py  test_interruption.py  test_latency.py  test_output_guard.py  test_rate_limit.py  test_session.py  test_state_transitions.py  test_tts_emotion.py  test_vad_mapping.py
frontend/: .dockerignore  Dockerfile  jest.config.ts  next.config.mjs  package-lock.json  package.json
frontend/app/: error.tsx  globals.css  layout.tsx  page.tsx
frontend/hooks/: useDataChannel.ts
frontend/lib/: api.ts  daily.ts  defaults.ts  env.ts  validate.ts
frontend/tests/: config-form.test.tsx  dashboard.test.tsx  home-errors.test.tsx  session-inactivity.test.tsx  useDataChannel.test.ts
frontend/types/: contract.ts
(+1 files in other folders)
